<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal" >

        <TextView
            android:text="@string/arrival"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/editArrivee"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:maxLines="1"
            android:lines="1"
            android:padding="10dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnSearch"
        android:padding="10dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/search_button"/>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal" >

        <TextView
            android:text="@string/distance"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


        <TextView
            android:id="@+id/longitudeDeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



        <TextView
            android:id="@+id/latitudeDeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/longitudeArText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



    <TextView
        android:id="@+id/latitudeArText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>